JaRutkowski #31 Settings - part 1.11